@startuml

entity User {
    * guid : uuid <<generated>>
    * username : text
    * mail : text
    * name : text
    * surname : text
    * birth_date : datetime
    * password_hash : text
    * is_active : boolean
    * deleted_at : timestamp
}

entity Payment {
    * guid : uuid <<generated>>
    * user_id : uuid <<FK>>
    * budget_offer_package_id : uuid <<FK>>
    * created_at : timestamp
    * paid : boolean
}

entity BudgetOfferPackage {
    * guid :: uuid <<generated>>
    * price_dollars : number
    * budget_increase : number
    * description : text
    * is_available : boolean
}

Payment }o--|| User
Payment }o--|| BudgetOfferPackage

@enduml